--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,13 @@
 rvm:
   - 1.8.7
+  - 1.9.1
   - 1.9.2
+  - 1.9.3
+  - jruby
+  - rbx
+  - rbx-2.0
   - ree
+  - ruby-head
 
 notifications:
   disabled: true
